# blizz

./: .gitignore  .violet.hjson  .violet.json  .violet.json5  Cargo.toml  LICENSE  PR_DESCRIPTION.md  README.md  README_inspector.md  add-workflows.sh  bacon.toml  blizz-48.txt  blizz.yaml  build_rs_cov.profraw  code-coverage-results.md  debug_gitlab.rs  inspect_lancedb.rs  jerrod-bad-example.js  jerrod-strict.violet.json  kernelle.tasks  kernelle.yaml  lancedb_inspector.py  mteb.csv  rust-toolchain.toml  rustfmt.toml  setup.sh  tarpaulin.toml  test_colors.yaml  test_example.js  test_example_with_no_duh.js  test_with_ignore.js  violet.yaml
.cargo/: config.toml
.cursor/: kernelle.tasks  kernelle.yaml
.cursor/rules/behaviors/: blizz-automatic-workflow.mdc  investigate-task.mdc  rate-confidence.mdc  respond-to-review.mdc  use-blizz.mdc
.cursor/rules/coding-style/: basic-file-organization.mdc  comments.mdc  dont-repeat-yourself.mdc  never-nester.mdc  no-duh-comments.mdc  stx-projects.code-workspace  use-yarn.mdc  writing-tests.mdc
.cursor/rules/definitions/: jerrod-operations.mdc  rules.mdc
.cursor/rules/personalities/: adam.mdc  ask-for-respect.mdc  (+7 more)
.github/: dependabot.yml  pull_request_template.md
.github/run/: assert-version-match.sh  bump-version.sh  create-archive.sh  create-coverage-badge.sh  create-release-notes.sh  tag-version.sh
.github/test/: install-uninstall-cycle.sh  install-when-already-installed.sh  install-when-not-installed.sh  isolate.sh  simple-update-test.sh  uninstall-when-installed.sh  uninstall-when-not-installed.sh  update-functionality.sh
.github/workflows/: dev.yml  gatekeeper.yml  lint.yml  linux.yml  macos.yml  quality-control.yml  release-build.yml  release-gatekeeper.yml  release.yml  security.yml  test-install-cleanup.yml  test-secrets.yml  test-update-functionality.yml  test-updates.yml  test.yml  violet.yml  windows.yml
.jerrod/: session.json
crates/adam/: Cargo.toml
crates/adam/src/: main.rs
crates/bentley/: Cargo.toml
crates/bentley/examples/: demo.rs
crates/bentley/src/: daemon_logs.rs  lib.rs
crates/bentley/tests/: integration_tests.rs
crates/blizz/: Cargo.toml  tarpaulin.toml
crates/blizz/src/: commands.rs  daemon.rs  embedding_client.rs  embedding_model.rs  insight.rs  lib.rs  main.rs  model.rs  search.rs  semantic.rs  similarity.rs
crates/blizz/src/commands/: add.rs  do.rs  insights.rs  link.rs  mod.rs  remove.rs  secrets.rs  unlink.rs  update.rs  version.rs
crates/blizz/tests/: cli.rs  cli_enhancements.rs  commands.rs  daemon_tests.rs  edge_cases.rs  index_command.rs  lazy_embedding_save.rs  neural_features.rs  unit.rs
crates/insights/: Cargo.toml  tarpaulin.toml
crates/insights/src/: client.rs  commands.rs  embedding_client.rs  embedding_model.rs  gte_base.rs  insight.rs  lib.rs  main.rs  search.rs  semantic.rs  server_manager.rs  similarity.rs
crates/insights/src/cli/: client.rs  commands.rs  display.rs  mod.rs  server_manager.rs
crates/insights/src/rest/: middleware.rs  routing.rs  server.rs  types.rs
crates/insights/src/rest/handlers/: insights.rs  logs.rs  mod.rs  status.rs
crates/insights/src/server/: middleware.rs  mod.rs  routing.rs  server.rs  startup.rs  types.rs
crates/insights/src/server/handlers/: insights.rs  logs.rs  status.rs
crates/insights/src/server/models/: insight.rs
crates/insights/src/server/services/: embeddings.rs  lancedb.rs  mod.rs  search.rs  similarity.rs  vector_database.rs
crates/insights/src/server/services/lancedb/: connection.rs  mod.rs  models.rs  records.rs  search.rs  table_manager.rs  vector_database.rs
crates/insights/tests/: cli.rs  cli_enhancements.rs  commands.rs  daemon_tests.rs  edge_cases.rs  index_command.rs  lazy_embedding_save.rs  neural_features.rs  unit.rs
crates/jerrod/: Cargo.toml  REACTIONS.md
crates/jerrod/.jerrod/: session.json
crates/jerrod/src/: auth.rs  lib.rs  main.rs
crates/jerrod/src/commands/: acknowledge.rs  comment.rs  commit.rs  defer.rs  finish.rs  mod.rs  peek.rs  pop.rs  question.rs  refresh.rs  resolve.rs  start.rs  status.rs
crates/jerrod/src/display/: mod.rs
crates/jerrod/src/github/: mod.rs
crates/jerrod/src/platform/: detection.rs  github.rs  gitlab.rs  mod.rs
crates/jerrod/src/session/: mod.rs
crates/jerrod/tests/: auth_dependency_injection_tests.rs  auth_tests.rs  command_comment_tests.rs  command_resolve_tests.rs  command_tests.rs  display_tests.rs  github_platform_tests.rs  integration_tests.rs  main_cli_tests.rs  main_integration_tests.rs  mock_github.rs  platform_tests.rs  session_tests.rs  simple_command_tests.rs
crates/kernelle/: Cargo.toml
crates/kernelle/src/: main.rs
crates/kernelle/src/commands/: add.rs  daemon.rs  do.rs  mod.rs  remove.rs  retrieve.rs  secrets.rs  store.rs  update.rs  version.rs
crates/secrets/: Cargo.toml  tarpaulin.toml
crates/secrets/src/: cli.rs  commands.rs  encryption.rs  keeper_client.rs  lib.rs  main.rs
crates/secrets/tests/: encryption_tests.rs
crates/sentinel/: Cargo.toml
crates/sentinel/src/: daemon.rs  encryption.rs  lib.rs  main.rs
crates/sentinel/tests/: daemon_tests.rs  encryption_tests.rs
crates/thoughts/: Cargo.toml
crates/violet/: .violet.json  .violet.json5  Cargo.toml  README.md  README_old.md  tarpaulin.toml
crates/violet/src/: chunking.rs  comments.rs  config.rs  directives.rs  lib.rs  linter.rs  main.rs  metrics.rs  parser.rs  scoring.rs  simplicity.rs
crates/violet/src/strategies/: simplicity.md  strategies.md
designs/: ephraim-design.md  ephraim.mdc  keys-command.md  mcp-command.md  self-hosted-LLM.md  upgrade-management.md
discussions/: simplicity_metric_is_insane.md
docs/: _config.yml  alpha.md  examples.md  getting-started.md  index.md  organizational-knowledge.md  team-collaboration.md
scripts/: cleanup.sh  count-source-lines.sh  ensure-final-newlines.sh  install.sh  uninstall.sh
scripts/templates/: blizz.internal.source.gone.template  blizz.source.template  kernelle.internal.source.gone.template  kernelle.internal.source.template  kernelle.source.gone  kernelle.source.template
src/: lib.rs  main.rs
(+112 files in other folders)
