[workspace]
resolver = "2"
members = [
    "crates/adam",
    "crates/bentley", 
    "crates/insights",
    "crates/kernelle",
    "crates/sentinel",
    "crates/violet"
]

[workspace.package]
version = "0.2.35"
edition = "2021"
authors = ["Voxel <travelsizedlions@gmail.com>"]
license = "Private"
repository = "https://github.com/TravelsizedLions/kernelle"

[workspace.metadata]
updates_api_base = "https://api.github.com/repos/TravelSizedLions/kernelle"


[workspace.dependencies]
bentley = { path = "crates/bentley" }
gitlab = "0.1800"
reqwest = { version = "0.12.20", features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
dirs = "6.0"
colored = "3.0"
console = "0.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
tempfile = "3.20"
tokio-test = "0.4"
base64 = "0.22"
regex = "1.11"
octocrab = "0.44.1"
