[package]
name = "adam"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Knowledge insight management, scoring, and consolidation tool"

[[bin]]
name = "adam"
path = "src/main.rs"

[dependencies]
insights = { path = "../insights", default-features = false }

clap.workspace = true

dirs.workspace = true

chrono.workspace = true

anyhow.workspace = true
thiserror.workspace = true

colored.workspace = true
console.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true 
