[package]
name = "bentley"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Theatrical logging and output formatting library"

[lib]
name = "bentley"
path = "src/lib.rs"

[dependencies]
colored.workspace = true
console.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

chrono.workspace = true

anyhow.workspace = true
thiserror.workspace = true

serde.workspace = true
serde_json.workspace = true

# For daemon log storage  
tokio = { workspace = true, optional = true }

# For JSON schema generation
schemars = { version = "0.8", features = ["chrono"], optional = true }

[dev-dependencies]
tempfile.workspace = true 
# Additional tokio features needed for async tests
tokio-test.workspace = true 

[features]
default = []
daemon-logs = ["tokio"]
schemars = ["dep:schemars"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
