[package]
name = "blizz"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Knowledge management and insight storage system"

[lib]
name = "blizz"
path = "src/lib.rs"

[[bin]]
name = "blizz"
path = "src/main.rs"

[[bin]]
name = "blizz-daemon"
path = "src/bin/blizz-daemon.rs"

[features]
default = ["semantic", "neural"]
semantic = []
neural = ["ort", "ndarray", "tokenizers", "tokio", "uuid"]

[dependencies]
clap.workspace = true

dirs.workspace = true

chrono.workspace = true

anyhow.workspace = true
thiserror.workspace = true

colored.workspace = true
console.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"

# Async runtime for daemon IPC
tokio = { version = "1.0", features = ["full"], optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }

# Neural embeddings via ONNX (v2 API!)
ort = { version = "2.0.0-rc.10", features = ["fetch-models"], optional = true }
ndarray = { version = "0.16", optional = true }
tokenizers = { version = "0.19", default-features = false, features = ["onig"], optional = true }

# Future: Neural embeddings when ecosystem stabilizes

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
serial_test = "3.2"
tempfile.workspace = true 
