[package]
name = "blizz"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Blizz toolchain package manager and workflow orchestrator"

[[bin]]
name = "blizz"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true  
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
dirs = "6.0"
reqwest.workspace = true
tempfile = "3.0"
chrono.workspace = true
secrets = { path = "../secrets" }
rpassword = "7.0"
bentley = { path = "../bentley" }
insights = { path = "../insights" }

[dev-dependencies]
tempfile = "3.0"
mockito = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
