[package]
name = "insights"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Knowledge management and insight storage system"

[lib]
name = "insights"
path = "src/lib.rs"

[[bin]]
name = "insights"
path = "src/main.rs"

[[bin]]
name = "install_insights_cuda_dependencies"
path = "src/bin/install_insights_cuda_dependencies.rs"

[[bin]]
name = "insights_server"
path = "src/bin/insights_server.rs"

[dependencies]
clap.workspace = true
dirs.workspace = true
chrono.workspace = true
anyhow.workspace = true
colored.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
bentley = { workspace = true, features = ["daemon-logs", "schemars"] }

serde_yaml.workspace = true

# Async runtime for daemon IPC
tokio.workspace = true
uuid.workspace = true

# REST API dependencies
axum = { version = "0.8", features = ["macros"] }
schemars = { version = "0.8", features = ["uuid1", "chrono"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client dependencies
reqwest.workspace = true
once_cell = "1.17"

# Heavy ML dependencies - optional for CI performance
lancedb = { version = "0.21.3", default-features = false, optional = true }
arrow = { version = "55", features = ["json"], optional = true }
arrow-json = { version = "55", optional = true }
futures.workspace = true

# Neural embeddings - optional for CI performance  
ort = { version = "2.0.0-rc.10", default-features = false, features = [
  "fetch-models", "cuda", "coreml", "ndarray", "std"
], optional = true }
ndarray = { version = "0.16", optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["onig"], optional = true }
hf-hub = { version = "0.4", default-features = false, features = ["tokio"], optional = true }
safetensors = { version = "0.6", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
serial_test = "3.2"
tempfile.workspace = true
mockall.workspace = true

[[bin]]
name = "inspect_lancedb"
path = "../../inspect_lancedb.rs"
required-features = ["ml-features"]

[features]
default = ["ml-features", "download-onnx-binaries"] 
ml-features = [
  "dep:lancedb", "dep:arrow", "dep:arrow-json", 
  "dep:ort", "dep:ndarray", "dep:tokenizers", 
  "dep:hf-hub", "dep:safetensors"
]
download-onnx-binaries = ["ort?/download-binaries"]  # Optional dependency

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
