[package]
name = "jerrod"
version = "0.1.0"
edition = "2021"
description = "GitLab and GitHub merge request review tool - the reliable guardian of code quality"

[[bin]]
name = "jerrod"
path = "src/main.rs"

[dependencies]
gitlab.workspace = true
reqwest.workspace = true

clap = { workspace = true }

tokio = { workspace = true, features = ["full", "process"] }

serde = { workspace = true }
serde_json = { workspace = true }

chrono = { workspace = true }

anyhow = { workspace = true }
thiserror.workspace = true

dirs.workspace = true

colored.workspace = true
console.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

url = { workspace = true }

bentley = { workspace = true }
sentinel = { path = "../sentinel" }
octocrab = "0.44.1"

async-trait = "0.1"

regex = "1.0"

aes-gcm = "0.10"
base64 = "0.20"
rand = "0.8"

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true 