[package]
name = "jerrod"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "GitLab and GitHub merge request review tool - the reliable guardian of code quality"

[[bin]]
name = "jerrod"
path = "src/main.rs"

[dependencies]
reqwest.workspace = true

clap = { workspace = true }

tokio = { workspace = true, features = ["full", "process"] }

serde = { workspace = true }
serde_json = { workspace = true }

chrono = { workspace = true }

anyhow = { workspace = true }
thiserror.workspace = true

dirs.workspace = true

colored.workspace = true
console.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

url = { workspace = true }
urlencoding = "2.1"

bentley = { workspace = true }
sentinel = { path = "../sentinel" }
octocrab = "0.44.1"

async-trait = "0.1"

regex = "1.0"
rpassword = "7.3"

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
assert_cmd = "2.0"
serial_test = "3.2"
wiremock = "0.6" 
