[package]
name = "kernelle"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Kernelle toolshed package manager and workflow orchestrator"

[[bin]]
name = "kernelle"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
json5 = "0.4" 

[dev-dependencies]
tempfile = "3.0"
