[package]
name = "kernelle"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Kernelle toolshed package manager and workflow orchestrator"

[[bin]]
name = "kernelle"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "6.0"
reqwest.workspace = true
tempfile = "3.0"
chrono = { version = "0.4", features = ["serde"] }
secrets = { path = "../secrets" }
rpassword = "7.0"
bentley = { path = "../bentley" }

[dev-dependencies]
tempfile = "3.0"
mockito = "1.0"
