[package]
name = "secrets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Secure credential storage for Blizz's toolchain"

[[bin]]
name = "secrets"
path = "src/main.rs"

[[bin]]
name = "keeper"
path = "src/bin/keeper.rs"

[dependencies]

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
bentley = { workspace = true }
clap = { version = "4.5", features = ["derive", "env"] }
dialoguer = { version = "0.11", features = ["password"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
aes-gcm = "0.10"
rand = "0.9"
base64 = { workspace = true }
native-dialog = "0.9"
sha2 = "0.10"
argon2 = "0.5"
hostname = "0.4"
whoami = "1.6"
uuid = "1.18"

[dev-dependencies]
tempfile = { workspace = true }
hex = "0.4"
temp-env = "0.3"
vfs = "0.12"
assert_cmd = "2.0"
predicates = "3.0"
rexpect = "0.5"

[lib]
name = "secrets"
path = "src/lib.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
