[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
description = "Secure credential storage for Kernelle tools - the watchful guardian of secrets"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
bentley = { path = "../bentley" }
clap = { version = "4.5", features = ["derive", "env"] }
rpassword = "7.3"
# Daemon and IPC functionality
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
# Encryption for credential storage
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.20"
# System password prompts
native-dialog = "0.7"

[dev-dependencies]
tempfile = "3.20"

[lib]
name = "sentinel"
path = "src/lib.rs" 