[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"
description = "Secure credential storage for Kernelle tools - the watchful guardian of secrets"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
bentley = { path = "../bentley" }
clap = { version = "4.5", features = ["derive", "env"] }
rpassword = "7.3"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.20"
native-dialog = "0.7"

[dev-dependencies]
tempfile = "3.20"

[lib]
name = "sentinel"
path = "src/lib.rs" 
