[package]
name = "sentinel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Secure credential storage for Kernelle tools - the watchful guardian of secrets"

[[bin]]
name = "sentinel"
path = "src/main.rs"

[dependencies]

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
bentley = { path = "../bentley" }
clap = { version = "4.5", features = ["derive", "env"] }
rpassword = "7.3"
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
aes-gcm = "0.10"
rand = "0.9"
base64 = { workspace = true }
native-dialog = "0.7"
sha2 = "0.10"
argon2 = "0.5"
hostname = "0.4"
whoami = "1.4"
uuid = "1.10"

[dev-dependencies]
tempfile = { workspace = true }
hex = "0.4"

[lib]
name = "sentinel"
path = "src/lib.rs" 
