[package]
name = "violet"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Code complexity analysis and style enforcement tool"

[[bin]]
name = "violet"
path = "src/main.rs"

[dependencies]
clap.workspace = true
colored.workspace = true
json5 = "0.4"
serde = { workspace = true }
anyhow.workspace = true
dirs.workspace = true
glob = "0.3"
regex = "1.10"
[dev-dependencies]
tempfile.workspace = true 
