[package]
name = "violet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Code complexity analysis and style enforcement tool"

[[bin]]
name = "violet"
path = "src/main.rs"

[dependencies]
clap.workspace = true
colored.workspace = true
serde = { workspace = true }
serde_yaml.workspace = true
anyhow.workspace = true
glob = "0.3"
regex = "1.10"
[dev-dependencies]
tempfile.workspace = true 

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
